[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Levels/LevelTemplate.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Fonts/kenvector_future.ttf" type="DynamicFontData" id=4]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( -2, -2 )
b = Vector2( 800, -2 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( -2, -2 )
b = Vector2( -2, 480 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 802, 0 )
b = Vector2( 802, 480 )

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 0, 480 )
b = Vector2( 800, 480 )

[sub_resource type="Animation" id=5]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Blue:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Color( 0.0156863, 0.0156863, 0.0784314, 0 ), Color( 0.0156863, 0.0156863, 0.0784314, 1 ) ]
}

[sub_resource type="Animation" id=6]

length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ResultDisplay:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.7, 2 ),
"transitions": PoolRealArray( 4, 4, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( -397, 204 ), Vector2( 206, 204 ), Vector2( 206, 204 ), Vector2( 833, 204 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ResultDisplay:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 2 ),
"transitions": PoolRealArray( 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.16923, 1.16923 ), Vector2( 1.4, 1.4 ), Vector2( 1.31111, 1.31111 ), Vector2( 1.6, 1.6 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Blue:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0156863, 0.0156863, 0.0784314, 0 ), Color( 0.0156863, 0.0156863, 0.0784314, 0 ), Color( 0.0156863, 0.0156863, 0.0784314, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=8]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="LevelTemplate" type="Node"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

layer = -1

[node name="Edge" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
input_pickable = false
collision_layer = 10
collision_mask = 10
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="Collision1" type="CollisionShape2D" parent="Edge" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Collision2" type="CollisionShape2D" parent="Edge" index="1"]

shape = SubResource( 2 )

[node name="Collision3" type="CollisionShape2D" parent="Edge" index="2"]

shape = SubResource( 3 )

[node name="Collision4" type="CollisionShape2D" parent="Edge" index="3"]

shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="UpdateLabels" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/is_over = SubResource( 5 )
anims/show = SubResource( 6 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="HUD" parent="." index="4" instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Score" type="Label" parent="CanvasLayer" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -83.0
margin_right = 82.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.232285, 0.8125, 0.0698242, 1 )
custom_colors/font_color_shadow = Color( 0.0549316, 0.28125, 0.0796852, 1 )
text = "Score: ____"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="ResultDisplay" type="Label" parent="CanvasLayer" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 433.0
margin_top = -36.0
margin_right = 820.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 193, 36 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.207031, 0.207031, 0.207031, 1 )
text = "You ----"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Blue" type="ColorRect" parent="CanvasLayer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 800.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0156863, 0.0156863, 0.0784314, 1 )
_sections_unfolded = [ "Rect" ]

[node name="IsDead" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="timeout" from="UpdateLabels" to="." method="_on_IsWin_timeout"]

[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]

[connection signal="timeout" from="IsDead" to="." method="_on_IsDead_timeout"]


